--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Arcana <em>by HTML5 UP</em></a></h1>
+						<h1><a href="index.html" id="logo"><img src="images/logo.png"</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
