About page draft w/ picture file (not in html) Signed-off-by: Daniel Fontenot <DLFontenot@github.com>

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar</title>
+		<title>About Us</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -27,7 +27,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li>
+			<!--					<li>
 									<a href="#">Dropdown</a>
 									<ul>
 										<li><a href="#">Lorem dolor</a></li>
@@ -49,7 +49,8 @@
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="two-sidebar.html">Two Sidebar</a></li>
-								<li class="current"><a href="no-sidebar.html">No Sidebar</a></li>
+			-->
+								<li class="current"><a href="about.html">About Us</a></li>
 							</ul>
 						</nav>
 
@@ -64,33 +65,26 @@
 
 								<article>
 									<header>
-										<h2>No Sidebar</h2>
+										<h2>Our Mission</h2>
 										<p>All content, all the time.</p>
 									</header>
 
-									<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+									<!-- <span class="image featured"><img style="width:70%;margin-left:auto;margin-right:auto;" src="images/coffee.jpg" alt="" /></span>
+-->
+									<p>Currently, there is an abundance of news and information available online. With so many sources available,
+									users have to manage multiple accounts and subscriptions just to get their fair dose of news. At Nuntius,
+									we believe that a central news hub is long overdue. So we delivered. With us, you can follow all the sources you want,
+									all the time, with just one account.  </p>
 
-									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									consequat etiam lorem ipsum dolor sit amet nullam.</p>
-
-									<h3>And Yet Another Subheading</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-									justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-									ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-									vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-									Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-									rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-									Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-									Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-
-									<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-									quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-									Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-									fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-									Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-									Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+									<h3>About Us</h3>
+									<p>As a multifaceted group of students, we found ourselves using over a dozen news sources to get our information. From
+									sports to politics and entertainment to worldnews, there is just too much going on to have on source. However, we constantly
+									found ourselves burdened with the need to login, update payment information, and manage subscriptions individually. After
+									developing a system for integrating our accounts, we only had one Harambe to feed. Our friends got wind of it and just a couple 
+									of months later we went live.</p>
+									<p>Daniel Fontenot is a 3rd year engineering student who specializes in animal news to be shared with pets.<br>
+									   Eric Xie (Epsilon Chi) is the first co-ed frat-srat to exist, specializing in tumblr.<br>
+									   4trad is an internet troll and hacker responsible for the #DNCleeks, a great meal. </p>
 								</article>
 
 						</div>
@@ -101,20 +95,12 @@
 				<div id="footer">
 					<div class="container">
 						<div class="row">
-							<section class="3u 6u(narrower) 12u$(mobilep)">
+							<section class="6u 6u(narrower) 12u$(mobilep)">
 								<h3>Links to Stuff</h3>
 								<ul class="links">
 									<li><a href="#">Mattis et quis rutrum</a></li>
 									<li><a href="#">Suspendisse amet varius</a></li>
 									<li><a href="#">Sed et dapibus quis</a></li>
-								</ul>
-							</section>
-							<section class="3u 6u$(narrower) 12u$(mobilep)">
-								<h3>More Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
 								</ul>
 							</section>
 							<section class="6u 12u(narrower)">
