--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo"><img src="images/logo.png"</a></h1>
+						<h1><a href="index.html" id="logo"><img src="images/logo.png" alt="Nuntius"</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
+								<!--
 								<li>
 									<a href="#">Dropdown</a>
 									<ul>
@@ -49,7 +50,8 @@
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="two-sidebar.html">Two Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								-->
+								<li><a href="about.html">About Us</a></li>
 							</ul>
 						</nav>
 
@@ -58,7 +60,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
+						<h2>Nuntius: <em>An à la carte, subscription based, news service. </em></h2>
 						<a href="#" class="button">Learn More</a>
 					</header>
 				</section>
@@ -69,23 +71,23 @@
 						<div class="row 200%">
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<i class="icon major fa-paper-plane"></i>
-									<h3>This Is Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<img src = "images/list.png"/>
+									<h3>Customize</h3>
+									<p>Choose individual news sources to appear in your feed, or bundle together a variety.</p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<i class="icon major fa-pencil"></i>
-									<h3>Also Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<img src = "images/newspaper.png"/>
+									<h3>Simplify</h3>
+									<p>All your news, in one place. You no longer have to remember logins for every news subscription, and can read them all in your personal feed.</p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<i class="icon major fa-wrench"></i>
-									<h3>Probably Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<img src = "images/coins.png"/>
+									<h3>Save</h3>
+									<p>Get a better deal on all the news services you love by bundling them together. The more you choose, the more you save.</p>
 								</div>
 							</section>
 						</div>
@@ -96,8 +98,8 @@
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>A gigantic heading you can use for whatever</h2>
-							<p>With a much smaller subtitle hanging out just below it</p>
+							<h2>"The Netflix of News"<span style = "font-size:.75em;color:#999;"> -Forbes</span></h2>
+							<p>Check out some of our most popular publications</p>
 						</header>
 					</div>
 				</section>
@@ -108,19 +110,19 @@
 						<div class="row">
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/timemagazine.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The First Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Time Magazine</h3>
+										<p>Americas most popular weekly news magazine. </p>
 									</div>
 								</div>
 							</section>
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/pmech.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The Second Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Popular Mechanics</h3>
+										<p>The best source for information on modern and future technology.<p>
 									</div>
 								</div>
 							</section>
@@ -128,19 +130,19 @@
 						<div class="row">
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/wsj.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The Third Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Wall Street Journal</h3>
+										<p>Daily news about business around the world.</p>
 									</div>
 								</div>
 							</section>
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/natgeo.png" alt="" /></a>
 									<div class="inner">
-										<h3>The Fourth Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>National Geographic</h3>
+										<p>Read about geography, history and world cultures.</p>
 									</div>
 								</div>
 							</section>
@@ -152,8 +154,8 @@
 				<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header>
-							<h2>Are you ready to continue your quest?</h2>
-							<a href="#" class="button">Insert Coin</a>
+							<h2>Start using Nuntius today</h2>
+							<a href="#" class="button">Subscribe</a>
 						</header>
 					</div>
 				</section>
@@ -162,20 +164,12 @@
 				<div id="footer">
 					<div class="container">
 						<div class="row">
-							<section class="3u 6u(narrower) 12u$(mobilep)">
+							<section class="6u 6u(narrower) 12u$(mobilep)">
 								<h3>Links to Stuff</h3>
 								<ul class="links">
 									<li><a href="#">Mattis et quis rutrum</a></li>
 									<li><a href="#">Suspendisse amet varius</a></li>
 									<li><a href="#">Sed et dapibus quis</a></li>
-								</ul>
-							</section>
-							<section class="3u 6u$(narrower) 12u$(mobilep)">
-								<h3>More Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
 								</ul>
 							</section>
 							<section class="6u 12u(narrower)">
