signup page/ logo

--- a/signup.html
+++ b/signup.html
@@ -50,8 +50,8 @@
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="two-sidebar.html">Two Sidebar</a></li>
 			-->
-								<li class="current"><a href="about.html">About Us</a></li>
-								<li><a href="signup.html">Sign Up</a></li>
+								<li><a href="about.html">About Us</a></li>
+								<li class="current"><a href="signup.html">Sign Up</a></li>
 							</ul>
 						</nav>
 
@@ -66,26 +66,8 @@
 
 								<article>
 									<header>
-										<h2>Our Mission</h2>
-										<p>All content, all the time.</p>
+										<h2>Content Coming Soon</h2>
 									</header>
-
-									<!-- <span class="image featured"><img style="width:70%;margin-left:auto;margin-right:auto;" src="images/coffee.jpg" alt="" /></span>
--->
-									<p>Currently, there is an abundance of news and information available online. With so many sources available,
-									users have to manage multiple accounts and subscriptions just to get their fair dose of news. At Nuntius,
-									we believe that a central news hub is long overdue. So we delivered. With us, you can follow all the sources you want,
-									all the time, with just one account.  </p>
-
-									<h3>About Us</h3>
-									<p>As a multifaceted group of students, we found ourselves using over a dozen news sources to get our information. From
-									sports to politics and entertainment to worldnews, there is just too much going on to have on source. However, we constantly
-									found ourselves burdened with the need to login, update payment information, and manage subscriptions individually. After
-									developing a system for integrating our accounts, we only had one Harambe to feed. Our friends got wind of it and just a couple 
-									of months later we went live.</p>
-									<p>Daniel Fontenot is a 3rd year engineering student who specializes in animal news to be shared with pets.<br>
-									   Eric Xie (Epsilon Chi) is the first co-ed frat-srat to exist, specializing in tumblr.<br>
-									   4trad is an internet troll and hacker responsible for the #DNCleeks, a great meal. </p>
 								</article>
 
 						</div>
