--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo"><img src="images/logo.png" alt="Nuntius"</a></h1>
+						<h1><a href="index.html" id="logo"><img src="images/logo.png" alt="Nuntius"></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -49,9 +49,9 @@
 								</li>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="two-sidebar.html">Two Sidebar</a></li>
 								-->
 								<li><a href="about.html">About Us</a></li>
+								<li><a href="signup.html">Sign Up</a></li>
 							</ul>
 						</nav>
 
@@ -98,7 +98,7 @@
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>"The Netflix of News"<span style = "font-size:.75em;color:#999;"> -Forbes</span></h2>
+							<h2>All content, all the time.</h2>
 							<p>Check out some of our most popular publications</p>
 						</header>
 					</div>
