--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Arcana by HTML5 UP
 	html5up.net | @ajlkn
@@ -21,7 +21,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo"><img src="images/logo.png" alt="Nuntius"></a></h1>
+						<h1><a href="index.html"><img id="logo" src="images/logo.png" alt="Nuntius"></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -61,7 +61,7 @@
 				<section id="banner">
 					<header>
 						<h2>Nuntius: <em>An à la carte, subscription based, news service. </em></h2>
-						<a href="#" class="button">Learn More</a>
+						<a href="about.html" class="button">Learn More</a>
 					</header>
 				</section>
 
@@ -155,7 +155,7 @@
 					<div class="container">
 						<header>
 							<h2>Start using Nuntius today</h2>
-							<a href="#" class="button">Subscribe</a>
+							<a href="signup.html" class="button">Subscribe</a>
 						</header>
 					</div>
 				</section>
