Final tweaks for MS1

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo"><img src="images/logo.png" alt="Nuntius"></a></h1>
+						<h1><a href="index.html"><img id="logo" src="images/logo.png" alt="Nuntius"></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -83,9 +83,6 @@
 									found ourselves burdened with the need to login, update payment information, and manage subscriptions individually. After
 									developing a system for integrating our accounts, we only had one Harambe to feed. Our friends got wind of it and just a couple 
 									of months later we went live.</p>
-									<p>Daniel Fontenot is a 3rd year engineering student who specializes in animal news to be shared with pets.<br>
-									   Eric Xie (Epsilon Chi) is the first co-ed frat-srat to exist, specializing in tumblr.<br>
-									   4trad is an internet troll and hacker responsible for the #DNCleeks, a great meal. </p>
 								</article>
 
 						</div>
