--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo"><img src="images/logo.png" alt="Nuntius"></a></h1>
+						<h1><a href="index.html"><img id="logo" src="images/logo.png" alt="Nuntius"></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
