Position swap/removed links

--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 						<div class="row 200%">
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<img src = "images/list.png"/>
-									<h3>Customize</h3>
-									<p>Choose individual news sources to appear in your feed, or bundle together a variety.</p>
+									<img src = "images/newspaper.png"/>
+									<h3>Simplify</h3>
+									<p>All your news, in one place. You no longer have to remember logins for every news subscription, and can read them all in your personal feed.</p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<img src = "images/newspaper.png"/>
-									<h3>Simplify</h3>
-									<p>All your news, in one place. You no longer have to remember logins for every news subscription, and can read them all in your personal feed.</p>
+									<img src = "images/list.png"/>
+									<h3>Customize</h3>
+									<p>Choose individual news sources to appear in your feed, or bundle together a variety.</p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
@@ -110,7 +110,7 @@
 						<div class="row">
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/timemagazine.jpg" alt="" /></a>
+									<a class="image left"><img src="images/timemagazine.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Time Magazine</h3>
 										<p>Americas most popular weekly news magazine. </p>
@@ -119,7 +119,7 @@
 							</section>
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pmech.jpg" alt="" /></a>
+									<a class="image left"><img src="images/pmech.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Popular Mechanics</h3>
 										<p>The best source for information on modern and future technology.<p>
@@ -130,7 +130,7 @@
 						<div class="row">
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/wsj.jpg" alt="" /></a>
+									<a class="image left"><img src="images/wsj.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Wall Street Journal</h3>
 										<p>Daily news about business around the world.</p>
@@ -139,7 +139,7 @@
 							</section>
 							<section class="6u 12u(narrower)">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/natgeo.png" alt="" /></a>
+									<a class="image left"><img src="images/natgeo.png" alt="" /></a>
 									<div class="inner">
 										<h3>National Geographic</h3>
 										<p>Read about geography, history and world cultures.</p>
