--- a/about.html
+++ b/about.html
@@ -79,10 +79,10 @@
 
 									<h3>About Us</h3>
 									<p>As a multifaceted group of students, we found ourselves using over a dozen news sources to get our information. From
-									sports to politics and entertainment to worldnews, there is just too much going on to have on source. However, we constantly
-									found ourselves burdened with the need to login, update payment information, and manage subscriptions individually. After
+									sports to politics and entertainment to world news, there is just too much going on to have one source. However, we constantly
+									found ourselves burdened with the need to log in, update payment information, and manage subscriptions individually. After
 									developing a system for integrating our accounts, we only had one Harambe to feed. Our friends got wind of it and just a couple 
-									of months later we went live.</p>
+									of months later our site went live.</p>
 								</article>
 
 						</div>
