--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
 							<section class="6u 6u(narrower) 12u$(mobilep)">
 								<h3>Links to Stuff</h3>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="about.html">About</a></li>
+									<li><a href="signup.html">Sign Up</a></li>
 								</ul>
 							</section>
 							<section class="6u 12u(narrower)">
