elaborated on aboutus, added button to signup on about.html

--- a/about.html
+++ b/about.html
@@ -75,17 +75,27 @@
 									<p>Currently, there is an abundance of news and information available online. With so many sources available,
 									users have to manage multiple accounts and subscriptions just to get their fair dose of news. At Nuntius,
 									we believe that a central news hub is long overdue. So we delivered. With us, you can follow all the sources you want,
-									all the time, with just one account.  </p>
-
+									all the time, with just one account.</p>
+									<h3>How it Works</h3>
+									<p>With Nuntius, users pick and choose exactly which news sources to subscribe to, and get rewarded with discounts on multiple subscriptions.
+									We offer all the most popular publications and more, so you can unify all your subscriptions with one account. Simply click Sign-Up below and
+									choose your publications to get quote, and sign-in to Nuntius on any computer to acess those subscriptions.</p>
 									<h3>About Us</h3>
 									<p>As a multifaceted group of students, we found ourselves using over a dozen news sources to get our information. From
 									sports to politics and entertainment to world news, there is just too much going on to have one source. However, we constantly
 									found ourselves burdened with the need to log in, update payment information, and manage subscriptions individually. After
-									developing a system for integrating our accounts, we only had one Harambe to feed. Our friends got wind of it and just a couple 
+									developing a system for integrating our accounts, we only had one Harambe to feed. Our friends got wind of it and just a couple
 									of months later our site went live.</p>
 								</article>
-
 						</div>
+					</div>
+				</section>
+				<section id="cta" class="wrapper style3">
+					<div class="container">
+						<header>
+							<h2>Start using Nuntius today</h2>
+							<a href="signup.html" class="button">Subscribe</a>
+						</header>
 					</div>
 				</section>
 
