--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
 					<div class="container">
 						<div class="row">
 							<section class="6u 6u(narrower) 12u$(mobilep)">
-								<h3>Links to Stuff</h3>
+								<h3>Links</h3>
 								<ul class="links">
 									<li><a href="index.html">Home</a></li>
 									<li><a href="about.html">About</a></li>
