updated the about page and moved templates into /templates folder

--- a/about.html
+++ b/about.html
@@ -77,9 +77,10 @@
 									we believe that a central news hub is long overdue. So we delivered. With us, you can follow all the sources you want,
 									all the time, with just one account.</p>
 									<h3>How it Works</h3>
-									<p>With Nuntius, users pick and choose exactly which news sources to subscribe to, and get rewarded with discounts on multiple subscriptions.
-									We offer all the most popular publications and more, so you can unify all your subscriptions with one account. Simply click Sign-Up below and
-									choose your publications to get quote, and sign-in to Nuntius on any computer to acess those subscriptions.</p>
+									<p>With Nuntius, users pick and choose exactly which news sources to subscribe to, and get rewarded with discounts on bundled subscriptions that we negotiate for you!
+									We offer all the most popular publications and more, so you can manage all of your subscriptions with just one account. Once signed-in, you can access all your subscriptions
+									from our website without having to login again.
+									Simply click Sign-Up below and choose your publications to get quote, and sign-in to Nuntius on any computer to access those subscriptions.</p>
 									<h3>About Us</h3>
 									<p>As a multifaceted group of students, we found ourselves using over a dozen news sources to get our information. From
 									sports to politics and entertainment to world news, there is just too much going on to have one source. However, we constantly
