changed 'our' to 'the' in "Check out some of our most popular publications"

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>All content, all the time.</h2>
-							<p>Check out some of our most popular publications</p>
+							<p>Check out some of the most popular publications</p>
 						</header>
 					</div>
 				</section>
