--- a/about.html
+++ b/about.html
@@ -81,11 +81,18 @@
 									We offer all the most popular publications and more, so you can manage all of your subscriptions with just one account. Once signed-in, you can access all your subscriptions
 									from our website without having to login again.
 									Simply click Sign-Up below and choose your publications to get quote, and sign-in to Nuntius on any computer to access those subscriptions.</p>
+									<h3>Advantages</h3>
+									<p><strong>Simple:</strong> Subscribing to multiple publications means managing an account for each website. Between memorizing passwords and renewals, reading becomes a pain. Using Nuntius,
+									we manage your subscriptions for you. Log in once from our website, and access to all your subscriptions from one location. We also handle payment, so no more keeping track of
+									when those subscriptions expire.</p>
+									<p><strong>Customizable:</strong> Unlike cable TV, we never force you to subscribe to publications that you don't want to read. With no contracts, bundles, or ads, you get exactly what you want, when you want it</p>
+									<p><strong>Save:</strong> You'll love keeping track of your news on Nuntius, and your wallet will too. We reward users who subscribe to multiple publications by offering unbeatable deals. The more you buy, the more you save
+									over traditional subscriptions.</p>
 									<h3>About Us</h3>
 									<p>As a multifaceted group of students, we found ourselves using over a dozen news sources to get our information. From
 									sports to politics and entertainment to world news, there is just too much going on to have one source. However, we constantly
 									found ourselves burdened with the need to log in, update payment information, and manage subscriptions individually. After
-									developing a system for integrating our accounts, we only had one Harambe to feed. Our friends got wind of it and just a couple
+									developing a system for integrating our accounts, we only had one thing left to do. Our friends got wind of it and just a couple
 									of months later our site went live.</p>
 								</article>
 						</div>
