finished welcome page

--- a/welcome.html
+++ b/welcome.html
@@ -42,7 +42,7 @@
 								<article>
 									<header>
 										<h2>Welcome</h2>
-										<p>What will you read today?</p>
+										<p>What will you read today? Click on a publication's picture to peruse the latest articles.</p>
 									</header>
 
 
@@ -50,8 +50,22 @@
 								</article>
 						</div>
 					</div>
-				</section>
-				<section class="wrapper style1">
+					<div class="container">
+						<div class="row">
+							<section class="3u">
+							</section>
+							<section class="6u 12u(narrower)">
+								<div class="box post">
+									<h2>Today's Featured Publication</h2>
+									<a class="image left" href="http://www.theonion.com/"><img src="images/onion.jpg" alt="" /></a>
+									<div class="inner">
+										<h3>The Onion</h3>
+										<p>America's finest news source.<p>
+									</div>
+								</div>
+							</section>
+						</div>
+					</div>
 					<div class="container">
 						<div class="row">
 							<section class="6u 12u(narrower)">
